--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>33 Team</title>
-  <link rel="icon" type="image/x-icon" href="Imagens/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/lolopz33/Portifolio-desbane-eu-kkkk/refs/heads/main/public/images/favicon%20(1).ico" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
